--- a/index.html
+++ b/index.html
@@ -25,9 +25,11 @@
     <div class="zapis">
         <img class="ten_fona" src="image/Прямоугольник 3@1X.png" alt="ten_fona">
         <div class="zapis_na_priem">
-            <div class="button">
-                <a href="#" class="zapis_link" > записаться на прием</a>
-            </div>
+           <a href="#" class="zapis_link" >
+                <div class="button">
+                 записаться на прием
+                </div>
+           </a>
         </div>
     </div>
 
@@ -62,9 +64,11 @@
         </ul>
     </div>
     <div class="zapis_na_priem_2">
-        <div class="button">
-            <a href="#" class="zapis_link" > записаться на прием</a>
-        </div>
+       <a href="#" class="zapis_link" >
+           <div class="button">
+             записаться на прием
+           </div>
+       </a>
     </div>
 
     <footer>
